--- a/GG_Partners/GG_Partners_Main.html
+++ b/GG_Partners/GG_Partners_Main.html
@@ -19,7 +19,7 @@
 </header>
 
 <nav>
-    <a id="1" title="Go back to the Home-page" href="../index.html"><img alt="Archive Logo" src="../Images/LogoSmall.ico" width="32px"></a>
+    <a id="1" title="Go back to the Home-page" href="../real_index.html"><img alt="Archive Logo" src="../Images/LogoSmall.ico" width="32px"></a>
     <a id="2" href="../Cups/Cups_Main.html">cups</a>
     <a id="3" href="../Consumables/Consumables_Main.html">cons</a>
     <a id="4" href="../GG_Merch/GG_Merch_Main.html">merch</a>
