--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h2>Password to enter site</h2>
     <form id="pswd">
       <input type="password" id="validate" placeholder="Password">
-      <button type="button" onclick="EasterEgg()">Enter</button>
+      <button type="button" onclick="Lock()">Enter</button>
     </form>
     <div id="container">
       <a id="CTE" title="Click to enter" href="real_index.html">Click to enter</a>
@@ -41,16 +41,7 @@
 </div>
 
 <script>
-  function EasterEgg() {
-    let inputPswd = document.getElementById("validate").value;
-    let correctPswd = "GGA8340853arikorp";
-    if (inputPswd === correctPswd) {
-      document.getElementById("container").style.display = "block";
-      document.getElementById("pswd").style.display = "none";
-    } else {
-      alert("Wrong Password!")
-    }
-  }
+  function _0x1457(_0x519e75,_0x35c33e){const _0x52070e=_0x5207();return _0x1457=function(_0x145778,_0xbba891){_0x145778=_0x145778-0x196;let _0x5d6bd3=_0x52070e[_0x145778];return _0x5d6bd3;},_0x1457(_0x519e75,_0x35c33e);}(function(_0x22ddfc,_0x33a964){const _0x15ef08=_0x1457,_0x46d795=_0x22ddfc();while(!![]){try{const _0x4db1f1=-parseInt(_0x15ef08(0x19a))/0x1+-parseInt(_0x15ef08(0x1a2))/0x2+parseInt(_0x15ef08(0x19b))/0x3+-parseInt(_0x15ef08(0x19d))/0x4+parseInt(_0x15ef08(0x1a0))/0x5+-parseInt(_0x15ef08(0x1a3))/0x6+parseInt(_0x15ef08(0x197))/0x7*(parseInt(_0x15ef08(0x198))/0x8);if(_0x4db1f1===_0x33a964)break;else _0x46d795['push'](_0x46d795['shift']());}catch(_0xdffcf9){_0x46d795['push'](_0x46d795['shift']());}}}(_0x5207,0xafd83));function _0x5207(){const _0x380aa1=['display','style','none','getElementById','118090yQJQXf','368fgqnYc','GGA8340853arikorp','389835HjFByD','2668473vCheak','validate','804080ihfWsu','block','pswd','1075830dWbLDV','value','225054pXYBRX','2742216bAlnbT'];_0x5207=function(){return _0x380aa1;};return _0x5207();}function Lock(){const _0x1060da=_0x1457;let _0x3ca1f3=document['getElementById'](_0x1060da(0x19c))[_0x1060da(0x1a1)],_0x2ad753=_0x1060da(0x199);_0x3ca1f3===_0x2ad753?(document[_0x1060da(0x196)]('container')[_0x1060da(0x1a5)][_0x1060da(0x1a4)]=_0x1060da(0x19e),document['getElementById'](_0x1060da(0x19f))['style'][_0x1060da(0x1a4)]=_0x1060da(0x1a6)):alert('Wrong\x20Password!');}
 </script>
 </body>
 </html>
