--- a/GG_Partners/GG_Partners_Main.html
+++ b/GG_Partners/GG_Partners_Main.html
@@ -17,6 +17,7 @@
 
 <header>
     <h1>Gamersupps Partners</h1>
+    <p>Every Gamersupps Partner ever. From partners having their own cups, to partners who have only a coupon. Everybody is here!</p>
 </header>
 
 <nav>
@@ -33,6 +34,35 @@
     <a id="fleft" title="View frequently asked questions" href="../FAQ/FAQ_Main.html">FAQ</a>
     <a id="fright" title="View our Copyright, whatever" href="../Copyright/Copyright_Page.html">Copyright</a>
 
+
+    <div id="write_mail_form">
+        <h2>Send us something!</h2>
+        <form class="newsletter-form">
+            <input type="email" placeholder="Enter your email" required />
+            <button type="submit">Send</button>
+        </form>
+    </div>
+    <div id="news_letter_signup">
+        <h2>Subscribe to our Newsletter</h2>
+        <form class="newsletter-form">
+            <input type="email" placeholder="Enter your email" required />
+            <button type="submit">Subscribe</button>
+        </form>
+    </div>
+    <div id="explanation_text">
+        <h2 style="font-family: sans-serif, 'Inter Semi Bold'; text-align: center">What is this?</h2>
+        <p>
+            This website is supposed to be an archive. Specifically, if you haven't noticed, for Gamersupps.
+            It's a fan-project, so nothing official. We ARE NOT Gamersupps, as so, we do NOT show any leaked content.
+            Anything ever made by Gamersupps, or anyone affiliated with them,
+            will be archived here. Why? Because WE love Gamersupps, and preserving it is important.
+            Many products go lost in time, or removed from the official website. That's why we decided, it's time to archive!
+        </p>
+    </div>
+    <div id="archive_partners">
+        <a title="View our official Partners!" href="../GGA_Partners/partners.html">View our official partners!</a>
+    </div>
+
     <div id="sleft">
         <p id="s1">Our Socials</p>
         <a class="Social_Button" id="sA"></a>
@@ -40,6 +70,7 @@
         <a class="Social_Button" id="sC"></a>
         <a class="Social_Button" id="sD"></a>
     </div>
+
 
     <div id="sright">
 
