--- a/real_index.html
+++ b/real_index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Gamersupps, GG, Waifu,Cups , Archive">
 
     <link rel="stylesheet" href=".Important/indexStyShe.css">
+    <link rel="stylesheet" href=".Important/universal.css">
     <link rel="icon" href="Images/LogoSmall.ico">
 
     <title>GG-Vault</title>
@@ -16,9 +17,9 @@
 
 <header>
     <div id="title">
-        <h1>GAMERSUPPS ARCHIVE</h1>
+        <h1>GAMERSUPPS-VAULT</h1>
         <p>
-            The archive to everything about Gamersupps!
+            The unofficial archive to everything about Gamersupps!
         </p>
     </div>
 </header>
@@ -111,8 +112,37 @@
 
 
 <footer>
-    <a id="fleft" title="View frequently asked questions" href="FAQ/FAQ_Main.html">FAQ</a>
-    <a id="fright" title="View our Copyright, whatever" href="Copyright/Copyright_Page.html">Copyright</a>
+    <a id="fleft" title="View frequently asked questions" href="../FAQ/FAQ_Main.html">FAQ</a>
+    <a id="fright" title="View our Copyright, whatever" href="../Copyright/Copyright_Page.html">Copyright</a>
+
+
+    <div id="write_mail_form">
+        <h2>Send us something!</h2>
+        <form class="newsletter-form">
+            <input type="email" placeholder="Enter your email" required />
+            <button type="submit">Send</button>
+        </form>
+    </div>
+    <div id="news_letter_signup">
+        <h2>Subscribe to our Newsletter</h2>
+        <form class="newsletter-form">
+            <input type="email" placeholder="Enter your email" required />
+            <button type="submit">Subscribe</button>
+        </form>
+    </div>
+    <div id="explanation_text">
+        <h2 style="font-family: sans-serif, 'Inter Semi Bold'; text-align: center">What is this?</h2>
+        <p>
+            This website is supposed to be an archive. Specifically, if you haven't noticed, for Gamersupps.
+            It's a fan-project, so nothing official. We ARE NOT Gamersupps, as so, we do NOT show any leaked content.
+            Anything ever made by Gamersupps, or anyone affiliated with them,
+            will be archived here. Why? Because WE love Gamersupps, and preserving it is important.
+            Many products go lost in time, or removed from the official website. That's why we decided, it's time to archive!
+        </p>
+    </div>
+    <div id="archive_partners">
+        <a style="padding: 2vw 2vw 2vw 0" title="View our official Partners!" href="GGA_Partners/partners.html">View our official partners!</a>
+    </div>
 
     <div id="sleft">
         <p id="s1">Our Socials</p>
@@ -122,20 +152,21 @@
         <a class="Social_Button" id="sD"></a>
     </div>
 
+
     <div id="sright">
 
         <p id="s2">Gamersupps Socials</p>
 
         <a class="Social_Button" id="sgA" target="_blank" href="https://x.com/gamersupps">
-            <img src="Images/X_Logo.png" height="50px">
+            <img src="../Images/X_Logo.png" height="50px">
         </a>
 
         <a class="Social_Button" id="sgB" target="_blank" href="https://www.instagram.com/gamersupps/">
-            <img src="Images/insta_logo.png" height="50px">
+            <img src="../Images/insta_logo.png" height="50px">
         </a>
 
         <a class="Social_Button" id="sgC" target="_blank" href="https://www.tiktok.com/@gamersupps?source=h5_m">
-            <img src="Images/tiktok_logo.png" height="50px">
+            <img src="../Images/tiktok_logo.png" height="50px">
         </a>
 
     </div>
