--- a/real_index.html
+++ b/real_index.html
@@ -90,7 +90,7 @@
 
     <a title="Go to the Consumables page" href="Consumables/Consumables_Main.html">
         <picture class="Banner" id="H">
-            <img alt="Consumables Banner" src="Images/"
+            <img alt="Consumables Banner" src="Images/consumables.jpg"
                  width="354" height="604">
         </picture>
     </a>
@@ -104,7 +104,7 @@
 
     <a title="Go to the GG Partners page" href="GG_Partners/GG_Partners_Main.html">
         <picture class="Banner" id="J">
-            <img alt="GG Partners Banner" src="Images/"
+            <img alt="GG Partners Banner" src="Images/partners.jpg"
                  width="354" height="604">
         </picture>
     </a>
