Summer Vacation Stuff
I forgor what I wrote 3 months back.
Maybe should've uploaded it on time.

--- a/GG_Partners/GG_Partners_Main.html
+++ b/GG_Partners/GG_Partners_Main.html
@@ -17,17 +17,17 @@
 
 <header>
     <h1>Gamersupps Partners</h1>
-    <p>Every Gamersupps Partner ever. From partners having their own cups, to partners who have only a coupon. Everybody is here!</p>
+    <p>Every Gamersupps Partner ever. From partners having their own cups, to partners who have a coupon. Everybody is here!</p>
 </header>
 
 <nav>
-    <a id="1" title="Go back to the Home-page" href="../real_index.html"><img alt="Archive Logo" src="../Images/LogoSmall.ico" width="32px"></a>
-    <a id="2" href="../Cups/Cups_Main.html">cups</a>
-    <a id="3" href="../Consumables/Consumables_Main.html">cons</a>
-    <a id="4" href="../GG_Merch/GG_Merch_Main.html">merch</a>
-    <a id="5" href="../VCards/VCards_Main.html">vcards</a>
-    <a id="6" href="../GG_Partners/GG_Partners_Main.html">partners</a>
-    <p id="7">search</p>
+    <a id="Home_Nav" title="Go back to the Home-page" href="../real_index.html"><img id="HomeImg_Nav" alt="Archive Logo" src="../Images/LogoSmall.ico" width="32px"></a>
+    <a class="Underline_Animation" id="WaifuCups_Nav" title="Go to the Waifu Cups page" href="../Cups/Cups_Main.html">cups</a>
+    <a class="Underline_Animation" id="Consumables_Nav" title="Go to the Consumables page" href="../Consumables/Consumables_Main.html">cons</a>
+    <a class="Underline_Animation" id="Merch_Nav" title="Go to the Merch page" href="../GG_Merch/GG_Merch_Main.html">merch</a>
+    <a class="Underline_Animation" id="VCards_Nav" title="Go to the Vcards page" href="../VCards/VCards_Main.html">vcards</a>
+    <a class="Underline_Animation" id="Partners_Nav" title="Go to the Partners page" href="../GG_Partners/GG_Partners_Main.html">partners</a>
+    <p id="Search_Nav" title="Search for specific categories or items">search</p>
 </nav>
 
 <footer>
@@ -37,10 +37,7 @@
 
     <div id="write_mail_form">
         <h2>Send us something!</h2>
-        <form class="newsletter-form">
-            <input type="email" placeholder="Enter your email" required />
-            <button type="submit">Send</button>
-        </form>
+        <button title="Click to mail us!" class="newsletter-form" type="submit" onclick="window.location.href='mailto:kira@kiraminecraft.org'">Send us a mail!</button>
     </div>
     <div id="news_letter_signup">
         <h2>Subscribe to our Newsletter</h2>
@@ -60,7 +57,7 @@
         </p>
     </div>
     <div id="archive_partners">
-        <a title="View our official Partners!" href="../GGA_Partners/partners.html">View our official partners!</a>
+        <a title="Click to view!" href="../GGA_Partners/partners.html">View our official partners!</a>
     </div>
 
     <div id="sleft">
