--- a/real_index.html
+++ b/real_index.html
@@ -5,6 +5,7 @@
     <meta name="author" content="Kira">
     <meta name="description" content="A fan-made Gamersupps GG Archive - This is the landing-page">
     <meta name="keywords" content="Gamersupps, GG, Waifu,Cups , Archive">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href=".Important/indexStyShe.css">
     <link rel="stylesheet" href=".Important/universal.css">
@@ -17,21 +18,21 @@
 
 <header>
     <div id="title">
-        <h1>GAMERSUPPS-VAULT</h1>
-        <p>
+        <img style="margin: 0;padding: 0;" alt="Gamersupps Vault Logo" src="Images/gamersupps_vault_logo.png" width="85%">
+        <h4>
             The unofficial archive to everything about Gamersupps!
-        </p>
+        </h4>
     </div>
 </header>
 
 <nav>
-    <a id="1" title="Go back to the Home-page" href="real_index.html"><img alt="Archive Logo" src="Images/LogoSmall.ico" width="32px"></a>
-    <a id="2" title="Go to the Waifu Cups page" href="Cups/Cups_Main.html">cups</a>
-    <a id="3" title="Go to the Consumables page" href="Consumables/Consumables_Main.html">cons</a>
-    <a id="4" title="Go to the Merch page" href="GG_Merch/GG_Merch_Main.html">merch</a>
-    <a id="5" title="Go to the Vcards page" href="VCards/VCards_Main.html">vcards</a>
-    <a id="6" title="Go to the Partners page" href="GG_Partners/GG_Partners_Main.html">partners</a>
-    <p id="7" title="Search for specific categories or items">search</p>
+    <a id="Home_Nav" title="Go back to the Home-page" href="real_index.html"><img id="HomeImg_Nav" alt="Archive Logo" src="Images/LogoSmall.ico" width="32px"></a>
+    <a class="Underline_Animation" id="WaifuCups_Nav" title="Go to the Waifu Cups page" href="Cups/Cups_Main.html">cups</a>
+    <a class="Underline_Animation" id="Consumables_Nav" title="Go to the Consumables page" href="Consumables/Consumables_Main.html">cons</a>
+    <a class="Underline_Animation" id="Merch_Nav" title="Go to the Merch page" href="GG_Merch/GG_Merch_Main.html">merch</a>
+    <a class="Underline_Animation" id="VCards_Nav" title="Go to the Vcards page" href="VCards/VCards_Main.html">vcards</a>
+    <a class="Underline_Animation" id="Partners_Nav" title="Go to the Partners page" href="GG_Partners/GG_Partners_Main.html">partners</a>
+    <p id="Search_Nav" title="Search for specific categories or items">search</p>
 </nav>
 
 <div id="main_title">
@@ -41,70 +42,70 @@
 <main>
     <a title="Go to the Waifu Cups page" href="Cups/WaifuCups/WaifuCups_Main.html">
         <picture class="Banner" id="A">
-            <img alt="Waifu Cups Banner" src="Images/waifuCups.jpg"
+            <img class="Banner_Animation" alt="Waifu Cups Banner" src="Images/waifuCups.jpg"
                  width="354" height="604">
         </picture>
     </a>
 
     <a title="Go to the Pixel Cups page" href="Cups/PixelCups/PixelCups_Main.html">
         <picture class="Banner" id="B">
-            <img alt="Pixel Cups Banner" src="Images/pixelCups.jpg"
+            <img class="Banner_Animation" alt="Pixel Cups Banner" src="Images/pixelCups.jpg"
                  width="354" height="604">
         </picture>
     </a>
 
     <a title="Go to the Waifu Jugs page" href="Cups/WaifuJugs/WaifuJugs_Main.html">
         <picture class="Banner" id="C">
-            <img alt="Waifu Jugs Banner" src="Images/waifuJugs.jpg"
+            <img class="Banner_Animation" alt="Waifu Jugs Banner" src="Images/waifuJugs.jpg"
                  width="354" height="604">
         </picture>
     </a>
 
     <a title="Go to the Metal Cups page" href="Cups/MetalCups/MetalCups_Main.html">
         <picture class="Banner" id="D">
-            <img alt="Metal Cups Banner" src="Images/metalCups.jpg"
+            <img class="Banner_Animation" alt="Metal Cups Banner" src="Images/metalCups.jpg"
                  width="354" height="604">
         </picture>
     </a>
 
     <a title="Go to the Merch page" href="GG_Merch/GG_Merch_Main.html">
         <picture class="Banner" id="E">
-            <img alt="GG Merch Banner" src="Images/merch.jpg"
+            <img class="Banner_Animation" alt="GG Merch Banner" src="Images/merch.jpg"
                  width="354" height="604">
         </picture>
     </a>
 
     <a title="Go to the Accessories page" href="GG_Merch/GG_Accessories/GG_Accessories_Main.html">
         <picture class="Banner" id="F">
-            <img alt="GG Accessories Banner" src="Images/acess.jpg"
+            <img class="Banner_Animation" alt="GG Accessories Banner" src="Images/acess.jpg"
                  width="354" height="604">
         </picture>
     </a>
 
     <a title="Go to the VCards page" href="VCards/VCards_Main.html">
         <picture class="Banner" id="G">
-            <img alt="VCards Banner" src="Images/vcards.jpg"
+            <img class="Banner_Animation" alt="VCards Banner" src="Images/vcards.jpg"
                  width="354" height="604">
         </picture>
     </a>
 
     <a title="Go to the Consumables page" href="Consumables/Consumables_Main.html">
         <picture class="Banner" id="H">
-            <img alt="Consumables Banner" src="Images/consumables.jpg"
+            <img class="Banner_Animation" alt="Consumables Banner" src="Images/consumables.jpg"
                  width="354" height="604">
         </picture>
     </a>
 
     <a title="Go to the Tubs page" href="Consumables/Tubs/Tubs_Main.html">
         <picture class="Banner" id="I">
-            <img alt="Tubs Banner" src="Images/tubs.jpg"
+            <img class="Banner_Animation" alt="Tubs Banner" src="Images/tubs.jpg"
                  width="354" height="604">
         </picture>
     </a>
 
     <a title="Go to the GG Partners page" href="GG_Partners/GG_Partners_Main.html">
         <picture class="Banner" id="J">
-            <img alt="GG Partners Banner" src="Images/partners.jpg"
+            <img class="Banner_Animation" alt="GG Partners Banner" src="Images/partners.jpg"
                  width="354" height="604">
         </picture>
     </a>
@@ -112,16 +113,13 @@
 
 
 <footer>
-    <a id="fleft" title="View frequently asked questions" href="../FAQ/FAQ_Main.html">FAQ</a>
-    <a id="fright" title="View our Copyright, whatever" href="../Copyright/Copyright_Page.html">Copyright</a>
+    <a id="fleft" title="View frequently asked questions" href="FAQ/FAQ_Main.html">FAQ</a>
+    <a id="fright" title="View our Copyright, whatever" href="Copyright/Copyright_Page.html">Copyright</a>
 
 
     <div id="write_mail_form">
         <h2>Send us something!</h2>
-        <form class="newsletter-form">
-            <input type="email" placeholder="Enter your email" required />
-            <button type="submit">Send</button>
-        </form>
+        <button title="Click to mail us!" class="newsletter-form" type="submit" onclick="window.location.href='mailto:kira@kiraminecraft.org'">Send us a mail!</button>
     </div>
     <div id="news_letter_signup">
         <h2>Subscribe to our Newsletter</h2>
@@ -141,7 +139,7 @@
         </p>
     </div>
     <div id="archive_partners">
-        <a style="padding: 2vw 2vw 2vw 0" title="View our official Partners!" href="GGA_Partners/partners.html">View our official partners!</a>
+        <a style="padding: 2vw 2vw 2vw 0" title="Click to view!" href="GGA_Partners/partners.html">View our official partners!</a>
     </div>
 
     <div id="sleft">
@@ -158,15 +156,15 @@
         <p id="s2">Gamersupps Socials</p>
 
         <a class="Social_Button" id="sgA" target="_blank" href="https://x.com/gamersupps">
-            <img src="../Images/X_Logo.png" height="50px">
+            <img src="Images/X_Logo.png" height="50px">
         </a>
 
         <a class="Social_Button" id="sgB" target="_blank" href="https://www.instagram.com/gamersupps/">
-            <img src="../Images/insta_logo.png" height="50px">
+            <img src="Images/insta_logo.png" height="50px">
         </a>
 
         <a class="Social_Button" id="sgC" target="_blank" href="https://www.tiktok.com/@gamersupps?source=h5_m">
-            <img src="../Images/tiktok_logo.png" height="50px">
+            <img src="Images/tiktok_logo.png" height="50px">
         </a>
 
     </div>
