--- a/Cups/Cups_Main.html
+++ b/Cups/Cups_Main.html
@@ -5,13 +5,109 @@
   <meta name="author" content="Kira">
   <meta name="description" content="A fan-made Gamersupps GG Archive - This is the main-page of every cup type">
   <meta name="keywords" content="Gamersupps, GG, Waifu,Cups , Archive">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="Cups_Main_StyShe.css">
+  <link rel="stylesheet" href="../.Important/universal.css">
   <link rel="icon" href="../Images/LogoSmall.ico">
 
   <title>GG-Vault</title>
 </head>
 <body>
-<h1>Main Page Cups Test Test</h1>
+
+
+<nav>
+  <a id="Home_Nav" title="Go back to the Home-page" href="../real_index.html"><img id="HomeImg_Nav" alt="Archive Logo" src="../Images/LogoSmall.ico" width="32px"></a>
+  <a class="Underline_Animation" id="WaifuCups_Nav" title="Go to the Waifu Cups page" href="../Cups/Cups_Main.html">cups</a>
+  <a class="Underline_Animation" id="Consumables_Nav" title="Go to the Consumables page" href="../Consumables/Consumables_Main.html">cons</a>
+  <a class="Underline_Animation" id="Merch_Nav" title="Go to the Merch page" href="../GG_Merch/GG_Merch_Main.html">merch</a>
+  <a class="Underline_Animation" id="VCards_Nav" title="Go to the Vcards page" href="../VCards/VCards_Main.html">vcards</a>
+  <a class="Underline_Animation" id="Partners_Nav" title="Go to the Partners page" href="../GG_Partners/GG_Partners_Main.html">partners</a>
+  <p id="Search_Nav" title="Search for specific categories or items">search</p>
+</nav>
+
+
+<header>
+  <img class="selection_banner" alt="Cups and co. banner" src="../Images/waifuCups.jpg" height="90%">
+  <img class="selection_banner" alt="Cups and co. banner" src="../Images/waifuJugs.jpg" height="90%">
+  <img class="selection_banner" alt="Cups and co. banner" src="../Images/metalCups.jpg" height="90%">
+  <img class="selection_banner" alt="Cups and co. banner" src="../Images/pixelCups.jpg" height="90%">
+</header>
+
+
+<main>
+  <div id="sorting_mechanism">
+    <p>Sort By</p>
+  </div>
+
+  <div id="plastic_container">
+    <p>Gurt: Yo!</p>
+  </div>
+</main>
+
+
+<div id="Banner">
+  <img alt="Cups and co. banner" src="../Images/waifuCups.jpg">
+</div>
+
+
+<footer>
+  <a id="fleft" title="View frequently asked questions" href="../FAQ/FAQ_Main.html">FAQ</a>
+  <a id="fright" title="View our Copyright, whatever" href="../Copyright/Copyright_Page.html">Copyright</a>
+
+
+  <div id="write_mail_form">
+    <h2>Send us something!</h2>
+    <button title="Click to mail us!" class="newsletter-form" type="submit" onclick="window.location.href='mailto:kira@kiraminecraft.org'">Send us a mail!</button>
+  </div>
+  <div id="news_letter_signup">
+    <h2>Subscribe to our Newsletter</h2>
+    <form class="newsletter-form">
+      <input type="email" placeholder="Enter your email" required />
+      <button type="submit">Subscribe</button>
+    </form>
+  </div>
+  <div id="explanation_text">
+    <h2 style="font-family: sans-serif, 'Inter Semi Bold'; text-align: center">What is this?</h2>
+    <p>
+      This website is supposed to be an archive. Specifically, if you haven't noticed, for Gamersupps.
+      It's a fan-project, so nothing official. We ARE NOT Gamersupps, as so, we do NOT show any leaked content.
+      Anything ever made by Gamersupps, or anyone affiliated with them,
+      will be archived here. Why? Because WE love Gamersupps, and preserving it is important.
+      Many products go lost in time, or removed from the official website. That's why we decided, it's time to archive!
+    </p>
+  </div>
+  <div id="archive_partners">
+    <a style="padding: 2vw 2vw 2vw 0" title="Click to view!" href="../GGA_Partners/partners.html">View our official partners!</a>
+  </div>
+
+  <div id="sleft">
+    <p id="s1">Our Socials</p>
+    <a class="Social_Button" id="sA"></a>
+    <a class="Social_Button" id="sB"></a>
+    <a class="Social_Button" id="sC"></a>
+    <a class="Social_Button" id="sD"></a>
+  </div>
+
+
+  <div id="sright">
+
+    <p id="s2">Gamersupps Socials</p>
+
+    <a class="Social_Button" id="sgA" target="_blank" href="https://x.com/gamersupps">
+      <img src="../Images/X_Logo.png" height="50px">
+    </a>
+
+    <a class="Social_Button" id="sgB" target="_blank" href="https://www.instagram.com/gamersupps/">
+      <img src="../Images/insta_logo.png" height="50px">
+    </a>
+
+    <a class="Social_Button" id="sgC" target="_blank" href="https://www.tiktok.com/@gamersupps?source=h5_m">
+      <img src="../Images/tiktok_logo.png" height="50px">
+    </a>
+
+  </div>
+</footer>
+
 </body>
 </html>
