Quick Visual Fix
Fixed out the Visual Bug with the Main title Box.
As well changed the main font, I didn't like the old one

--- a/real_index.html
+++ b/real_index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href=".Important/universal.css">
     <link rel="icon" href="Images/LogoSmall.ico">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,900;1,900&display=swap" rel="stylesheet">
+
     <title>GG-Vault</title>
 </head>
 <body>
@@ -18,8 +22,10 @@
 
 <header>
     <div id="title">
-        <img style="margin: 0;padding: 0;" alt="Gamersupps Vault Logo" src="Images/gamersupps_vault_logo.png" width="85%">
-        <h4>
+        <img style="margin: 0;padding: 0; object-fit: contain"
+             alt="Gamersupps Vault Logo" src="Images/gamersupps_vault_logo.png" width="85%">
+
+        <h4 style="font-family: Montserrat, sans-serif; font-optical-sizing: auto; font-weight: 900; font-style: normal;">
             The unofficial archive to everything about Gamersupps!
         </h4>
     </div>
@@ -27,15 +33,15 @@
 
 <nav>
     <a id="Home_Nav" title="Go back to the Home-page" href="real_index.html"><img id="HomeImg_Nav" alt="Archive Logo" src="Images/LogoSmall.ico" width="32px"></a>
-    <a class="Underline_Animation" id="WaifuCups_Nav" title="Go to the Waifu Cups page" href="Cups/Cups_Main.html">cups</a>
-    <a class="Underline_Animation" id="Consumables_Nav" title="Go to the Consumables page" href="Consumables/Consumables_Main.html">cons</a>
-    <a class="Underline_Animation" id="Merch_Nav" title="Go to the Merch page" href="GG_Merch/GG_Merch_Main.html">merch</a>
-    <a class="Underline_Animation" id="VCards_Nav" title="Go to the Vcards page" href="VCards/VCards_Main.html">vcards</a>
-    <a class="Underline_Animation" id="Partners_Nav" title="Go to the Partners page" href="GG_Partners/GG_Partners_Main.html">partners</a>
-    <p id="Search_Nav" title="Search for specific categories or items">search</p>
+    <a class="Underline_Animation" id="WaifuCups_Nav" title="Go to the Waifu Cups page" href="Cups/Cups_Main.html">Cups</a>
+    <a class="Underline_Animation" id="Consumables_Nav" title="Go to the Consumables page" href="Consumables/Consumables_Main.html">Cons</a>
+    <a class="Underline_Animation" id="Merch_Nav" title="Go to the Merch page" href="GG_Merch/GG_Merch_Main.html">Merch</a>
+    <a class="Underline_Animation" id="VCards_Nav" title="Go to the Vcards page" href="VCards/VCards_Main.html">Vcards</a>
+    <a class="Underline_Animation" id="Partners_Nav" title="Go to the Partners page" href="GG_Partners/GG_Partners_Main.html">Partners</a>
+    <p id="Search_Nav" title="Search for specific categories or items">Search</p>
 </nav>
 
-<div id="main_title">
+<div style="font-family: Montserrat, sans-serif; font-optical-sizing: auto; font-weight: 900; font-style: normal;" id="main_title">
     <h1>Categories</h1>
 </div>
 
@@ -129,13 +135,15 @@
         </form>
     </div>
     <div id="explanation_text">
-        <h2 style="font-family: sans-serif, 'Inter Semi Bold'; text-align: center">What is this?</h2>
+        <h2 style="text-align: center">What is this?</h2>
         <p>
+
             This website is supposed to be an archive. Specifically, if you haven't noticed, for Gamersupps.
             It's a fan-project, so nothing official. We ARE NOT Gamersupps, as so, we do NOT show any leaked content.
             Anything ever made by Gamersupps, or anyone affiliated with them,
             will be archived here. Why? Because WE love Gamersupps, and preserving it is important.
             Many products go lost in time, or removed from the official website. That's why we decided, it's time to archive!
+
         </p>
     </div>
     <div id="archive_partners">
