--- a/GG_Partners/GG_Partners_Main.html
+++ b/GG_Partners/GG_Partners_Main.html
@@ -10,6 +10,10 @@
     <link rel="icon" href="../Images/LogoSmall.ico">
     <link rel="stylesheet" href="../.Important/universal.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,900;1,900&display=swap" rel="stylesheet">
+
     <title>GG-Vault</title>
 </head>
 <body>
