--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <h1>THIS PAGE IS STILL UNDER CONSTRUCTION</h1>
 
   <div id="secret">
-    <h2>Password to enter site</h2>
+    <h2>Enter the Password view build</h2>
     <form id="pswd">
       <input type="password" id="validate" placeholder="Password">
       <button type="button" onclick="Lock()">Enter</button>
