--- a/real_index.html
+++ b/real_index.html
@@ -49,70 +49,70 @@
     <a title="Go to the Waifu Cups page" href="Cups/WaifuCups/WaifuCups_Main.html">
         <picture class="Banner" id="A">
             <img class="Banner_Animation" alt="Waifu Cups Banner" src="Images/waifuCups.jpg"
-                 width="354" height="604">
+                 width="100%" height="100%">
         </picture>
     </a>
 
     <a title="Go to the Pixel Cups page" href="Cups/PixelCups/PixelCups_Main.html">
         <picture class="Banner" id="B">
             <img class="Banner_Animation" alt="Pixel Cups Banner" src="Images/pixelCups.jpg"
-                 width="354" height="604">
+                 width="100%" height="100%">
         </picture>
     </a>
 
     <a title="Go to the Waifu Jugs page" href="Cups/WaifuJugs/WaifuJugs_Main.html">
         <picture class="Banner" id="C">
             <img class="Banner_Animation" alt="Waifu Jugs Banner" src="Images/waifuJugs.jpg"
-                 width="354" height="604">
+                 width="100%" height="100%">
         </picture>
     </a>
 
     <a title="Go to the Metal Cups page" href="Cups/MetalCups/MetalCups_Main.html">
         <picture class="Banner" id="D">
             <img class="Banner_Animation" alt="Metal Cups Banner" src="Images/metalCups.jpg"
-                 width="354" height="604">
+                 width="100%" height="100%">
         </picture>
     </a>
 
     <a title="Go to the Merch page" href="GG_Merch/GG_Merch_Main.html">
         <picture class="Banner" id="E">
             <img class="Banner_Animation" alt="GG Merch Banner" src="Images/merch.jpg"
-                 width="354" height="604">
+                 width="100%" height="100%">
         </picture>
     </a>
 
     <a title="Go to the Accessories page" href="GG_Merch/GG_Accessories/GG_Accessories_Main.html">
         <picture class="Banner" id="F">
             <img class="Banner_Animation" alt="GG Accessories Banner" src="Images/acess.jpg"
-                 width="354" height="604">
+                 width="100%" height="100%">
         </picture>
     </a>
 
     <a title="Go to the VCards page" href="VCards/VCards_Main.html">
         <picture class="Banner" id="G">
             <img class="Banner_Animation" alt="VCards Banner" src="Images/vcards.jpg"
-                 width="354" height="604">
+                 width="100%" height="100%">
         </picture>
     </a>
 
     <a title="Go to the Consumables page" href="Consumables/Consumables_Main.html">
         <picture class="Banner" id="H">
             <img class="Banner_Animation" alt="Consumables Banner" src="Images/consumables.jpg"
-                 width="354" height="604">
+                 width="100%" height="100%">
         </picture>
     </a>
 
     <a title="Go to the Tubs page" href="Consumables/Tubs/Tubs_Main.html">
         <picture class="Banner" id="I">
             <img class="Banner_Animation" alt="Tubs Banner" src="Images/tubs.jpg"
-                 width="354" height="604">
+                 width="100%" height="100%">
         </picture>
     </a>
 
     <a title="Go to the GG Partners page" href="GG_Partners/GG_Partners_Main.html">
         <picture class="Banner" id="J">
             <img class="Banner_Animation" alt="GG Partners Banner" src="Images/partners.jpg"
-                 width="354" height="604">
+                 width="100%" height="100%">
         </picture>
     </a>
 </main>
