--- a/Cups/Cups_Main.html
+++ b/Cups/Cups_Main.html
@@ -11,6 +11,10 @@
   <link rel="stylesheet" href="../.Important/universal.css">
   <link rel="icon" href="../Images/LogoSmall.ico">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,900;1,900&display=swap" rel="stylesheet">
+
   <title>GG-Vault</title>
 </head>
 <body>
