--- a/real_index.html
+++ b/real_index.html
@@ -207,16 +207,16 @@
     <div id="sleft">
         <p id="s1">Our Socials</p>
         <a class="Social_Button" id="sA" target="_blank" href="https://github.com/KiraLovely/drinking-problems">
-            GitHub
+            <img alt="Github Logo" src="Images/github-icon-1.png" height="50px">
         </a>
         <a class="Social_Button" id="sB" target="_blank" href="">
-            Instagram
+            <img alt="Instagram Logo" src="Images/insta_logo.png" height="50px">
         </a>
         <a class="Social_Button" id="sC" target="_blank" href="">
-            Twitter
+            <img alt="Twitter Logo" src="Images/X_Logo.png" height="50px">
         </a>
-        <a class="Social_Button" id="sD" target="_blank" href="https://discord.gg/JT9TxBJNDr">
-            Discord
+        <a class="Social_Button" id="sD" target="_blank" href="">
+            <img alt="Discord Logo" src="Images/discord-6.png" height="35px">
         </a>
     </div>
 
