--- a/GG_Partners/GG_Partners_Main.html
+++ b/GG_Partners/GG_Partners_Main.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="Partners_StyShe.css">
     <link rel="icon" href="../Images/LogoSmall.ico">
-    <link rel="stylesheet" href="../.Important/universal.css">
+    <link rel="stylesheet" href="../Important/universal.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
