--- a/Cups/Cups_Main.html
+++ b/Cups/Cups_Main.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="Cups_Main_StyShe.css">
-  <link rel="stylesheet" href="../.Important/universal.css">
+  <link rel="stylesheet" href="../Important/universal.css">
   <link rel="icon" href="../Images/LogoSmall.ico">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
