--- a/Cups/WaifuCups/WaifuCups_Main.html
+++ b/Cups/WaifuCups/WaifuCups_Main.html
@@ -9,7 +9,7 @@
 
   <link rel="stylesheet" href="waifucups.css">
   <link rel="icon" href="../../Images/LogoSmall.ico">
-  <link rel="stylesheet" href="../../.Important/universal.css">
+  <link rel="stylesheet" href="../../Important/universal.css">
 
   <title>GG-Vault</title>
 </head>
